--- a/src/main/resources/view/nazwaPrzyrzaduWidok.fxml
+++ b/src/main/resources/view/nazwaPrzyrzaduWidok.fxml
@@ -21,7 +21,7 @@
       </TextField>
       <HBox alignment="CENTER" prefHeight="48.0" prefWidth="290.0">
          <children>
-            <Button fx:id="dodajNowaNazwaPrzyrzadButton" mnemonicParsing="false" text="Dodaj" textAlignment="CENTER">
+            <Button fx:id="dodajNowaNazwaPrzyrzadButton" mnemonicParsing="false" onAction="#dodajNowaNazwe" text="Dodaj" textAlignment="CENTER">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
